# gnu_dr-geo

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  dr-geo.pro  drgenius_config.cc  drgenius_config.h  drgenius_help.h  drgenius_main.cc  drgenius_mdi.cc  drgenius_mdi.h  drgenius_view.cc  drgenius_view.h  drgeo  drgeo.desktop  drgeo.desktop.in  drgeo.spec  drgeo.spec.in  drgeo_adaptDialog.cc  drgeo_adaptDialog.h  drgeo_init.cc  drgeo_init.h  drgeo_printer.cc  drgeo_printer.h  drgeopoint.cpp  drgeopoint.h  editor_view.cc  editor_view.h  (+9 more)
.anjuta/session/: anjuta.session  dock-layout.xml
.deps/: drgenius_config.Po  drgenius_main.Po  drgenius_mdi.Po  drgenius_view.Po  drgeo_adaptDialog.Po  drgeo_init.Po  drgeo_printer.Po  editor_view.Po  geo_view.Po
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
dxfsupport/: Makefile  dxftoxml.cpp  dxftoxml.h  install.sh  read.cpp  write.cpp  xmltodxf.cpp  xmltodxf.h
encode/: Makefile  Makefile.am  Makefile.in  latin1.ps
examples/: Makefile  Makefile.am  Makefile.in
examples/figures/: Makefile  Makefile.am  Makefile.in  accel.big5.fgeo  accel.fgeo  angle-inscrit.fgeo  baballe.fgeo  braik_conic.fgeo  cercle-inscrit.fgeo  circle-locus.fgeo  conics.fgeo  duality.fgeo  fonctions_associees.fgeo  mercedes.fgeo  moyenne-prop.fgeo  orthocenter-locus.fgeo  orthocentre-symetique.fgeo  parallelogramme.fgeo  partage-segment.fgeo  polygon-7.fgeo  polygons.fgeo  problem1.fgeo  saliera.fgeo  signed-distance.fgeo  sinusoide.fgeo  slope.fgeo  steiner_conic.fgeo  symmetry-axe-2.fgeo  triangle_rectangle1.fgeo  trigo1.fgeo
examples/macro/: Makefile  Makefile.am  Makefile.in  bissectrice.mgeo  centre1.mgeo  orthocentre.mgeo  pentagone.mgeo  polygon-7.mgeo  segment.mgeo
examples/scheme/: Makefile  Makefile.am  Makefile.in  baravelle.scm  baum.scm  figure.scm  fractale.scm  koch.scm  pappo.scm  polygon.scm  polygon2.scm  premier.scm  spiral.scm  square.scm  steiner.scm  tilings.scm
geo/: ChangeLog  ChangeLog~  DevelopersFAQ  Makefile  Makefile.am  Makefile.in  couleur.h  define.h  drgeo_angle.cc  drgeo_angle.h  drgeo_arcCircle.cc  drgeo_arcCircle.h  drgeo_buildObject.cc  drgeo_buildObject.h  drgeo_circle.cc  drgeo_circle.h  drgeo_command.cc  drgeo_command.h  drgeo_control.cc  drgeo_control.h  drgeo_dialog.cc  drgeo_dialog.h  drgeo_direction.cc  drgeo_direction.h  drgeo_drawable.cc  drgeo_drawable.h  drgeo_drgeoStyle.h  drgeo_drgeoVector.cc  drgeo_drgeoVector.h  drgeo_dxf(1).cc  drgeo_dxf.cc  drgeo_dxf.h  drgeo_dxf.h~  drgeo_equation.cc  drgeo_equation.h  drgeo_figure.cc  drgeo_figure.h  drgeo_flydrawable.cc  drgeo_flydrawable.h  drgeo_geometricObject.cc  (+66 more)
geo/.deps/: drgeo_angle.Po  drgeo_arcCircle.Po  drgeo_buildObject.Po  drgeo_circle.Po  drgeo_command.Po  drgeo_control.Po  drgeo_dialog.Po  drgeo_direction.Po  drgeo_drawable.Po  drgeo_drgeoVector.Po  drgeo_equation.Po  drgeo_figure.Po  drgeo_flydrawable.Po  drgeo_geometricObject.Po  drgeo_gtkdrawable.Po  drgeo_gtkhelpers.Po  drgeo_gtkmacro.Po  drgeo_gtkproperty.Po  drgeo_gtkstyle.Po  drgeo_halfLine.Po  drgeo_latexdrawable.Po  drgeo_line.Po  drgeo_locus.Po  drgeo_macro.Po  drgeo_menu.Po  drgeo_numeric.Po  drgeo_point.Po  drgeo_polygon.Po  drgeo_postscriptdrawable.Po  drgeo_repere.Po  drgeo_scm_api.Po  drgeo_scm_helper.Po  drgeo_scm_interface.Po  drgeo_script.Po  drgeo_segment.Po  drgeo_string.Po  drgeo_tool.Po  drgeo_toolbar.Po  drgeo_type.Po  drgeo_value.Po  (+6 more)
glade/: Makefile  Makefile.am  Makefile.in  angle.xpm  axial_symetry.xpm  buildMacroDialog.glade  build_macro.xpm  central_symetry.xpm  circle.xpm  circle_arc.xpm  color-black.xpm  color-blue.xpm  color-bordeaux.xpm  color-dark-blue.xpm  color-dark-green.xpm  color-dark-grey.xpm  color-green.xpm  color-grey.xpm  color-orange.xpm  color-red.xpm  color-white.xpm  color-yellow.xpm  coordinates.xpm  cross.xpm  curveBar.glade  dashline.xpm  dialogSaveSession.glade  distance.xpm  drgenius2.glade  drgeo2.glade  drgeoMDI.glade  drgeoMain.glade  editValuePropertyDialog.glade  eraser.xpm  freePointPropertyDialog.glade  free_point.xpm  geoMenu.glade  half_line.xpm  homothetie.xpm  intersection_point.xpm  (+53 more)
icons/: ChangeLog  Makefile  Makefile.am  Makefile.in  drgenius_new_calculator.h  drgenius_new_canvas.h  drgenius_new_figure.h  drgenius_new_gel_script.h
plugin/: Makefile  Makefile.am  Makefile.in
plugin/drgeo/: Makefile  Makefile.am  Makefile.in  README
plugin/drgeo/progs/: Makefile  Makefile.am  Makefile.in  init-drgeo.scm  tm_drgeo
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  az.gmo  az.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  drgeo.pot  el.gmo  el.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  eu.gmo  eu.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  gu.gmo  gu.po  hi.gmo  hi.po  hr.gmo  hr.po  hu.gmo  hu.po  (+40 more)
scm/: ChangeLog  Makefile  Makefile.am  Makefile.in  drgeo_config.scm  drgeo_scm_interface.scm  drgeo_scm_interface_constant.scm  drgeo_scm_interface_constant_es.scm  drgeo_scm_interface_constant_fr.scm  drgeo_scm_interface_constant_nl.scm  drgeo_scm_interface_constant_sr.scm  preferences.scm
src/: Makefile.am  drgeoDrawingArea.cpp  drgeoDrawingArea.h  drgeoMDI.cpp  drgeoMDI.h  main.cpp  mainWindow.ui
src/gui/: Makefile.am  drgeoDrawingArea.cpp  drgeoDrawingArea.h  drgeoPainter.cpp  drgeoPainter.h  drgeoTDI.cpp  drgeoTDI.h
src/gui/ui/: Makefile.am  drgeoAbout.ui  drgeoMain.ui
src/kernel/: drgeoContainer.cpp  drgeoContainer.h
