# Libglade does't support pixmap path, so I have
# to place pixmaps into the glade directory

gladedir = $(datadir)/drgeo/glade

iconsdir = $(datadir)/drgeo/glade

icons_DATA = \
	angle.xpm          		\
	axial_symetry.xpm		\
	build_macro.xpm			\
	central_symetry.xpm		\
	circle.xpm			\
	circle_arc.xpm			\
	coordinates.xpm			\
	distance.xpm			\
	eraser.xpm			\
	free_point.xpm			\
	half_line.xpm			\
	homothetie.xpm			\
	intersection_point.xpm		\
	line.xpm			\
	line_menu.xpm			\
	load.xpm			\
	macro_menu.xpm			\
	middle.xpm			\
	move.xpm			\
	new_figure.xpm			\
	numeric_menu.xpm		\
	parallel.xpm			\
	perpendicular.xpm		\
	point_coordinate.xpm		\
	point_menu.xpm			\
	preferences.xpm			\
	quit.xpm			\
	rotation.xpm			\
	run_macro.xpm			\
	save.xpm			\
	segment.xpm			\
	styles.xpm			\
	tools_menu.xpm			\
	transformation_menu.xpm		\
	translation.xpm			\
	vectrex.xpm			\
	color-black.xpm			\
	color-blue.xpm			\
	color-bordeaux.xpm		\
	color-dark-blue.xpm		\
	color-dark-green.xpm		\
	color-dark-grey.xpm		\
	color-green.xpm			\
	color-grey.xpm			\
	color-orange.xpm		\
	color-red.xpm			\
	color-white.xpm			\
	color-yellow.xpm		\
	square-empty.xpm		\
	square.xpm			\
	round-empty.xpm			\
	round.xpm			\
	cross.xpm			\
	dashline.xpm			\
	largeline.xpm			\
	normalline.xpm			\
	polygon.xpm			\
	script.xpm			\
	widget-script.xpm		\
	property.xpm			\
	triangle.xpm			\
	drgeo.png			\
	drgenius_new_figure.xpm		\
	angle.png           		\
	axial_symetry.png		\
	build_macro.png			\
	central_symetry.png   		\
	circle.png   			\
	circle_arc.png  		\
	coordinates.png 		\
	distance.png   			\
	eraser.png   			\
	free_point.png  		\
	half_line.png   		\
	homothetie.png   		\
	intersection_point.png   	\
	line.png   			\
	line_menu.png   		\
	locus.png   			\
	macro_menu.png			\
	middle.png			\
	move.png			\
	numeric_menu.png		\
	parallel.png			\
	perpendicular.png		\
	point_coordinate.png		\
	point_menu.png			\
	rotation.png			\
	run_macro.png			\
	segment.png			\
	styles.png			\
	tools_menu.png			\
	transformation_menu.png		\
	translation.png			\
	vectrex.png			\
	polygon.png			\
	script.png			\
	widget-script.png		\
	property.png			\
	grid.png			\
	rename.png



glade_DATA = \
	printFigureDialog.glade		\
	renameViewDialog.glade		\
	uiAdaptDialog.glade		\
	relockDialog.glade		\
	lockDialog.glade		\
	unlockDialog.glade		\
	menuWindow.glade		\
	shortcutWindow.glade		\
	pointBar.glade			\
	curveBar.glade			\
	transformation.glade		\
	numericBar.glade		\
	macroBar.glade			\
	otherBar.glade			\
	freePointPropertyDialog.glade	\
	editValuePropertyDialog.glade	\
	scriptDialog.glade		\
	pointStyleDialog.glade		\
	lineStyleDialog.glade		\
	numericStyleDialog.glade	\
	buildMacroDialog.glade		\
	playMacroDialog.glade		\
	propertyBox.glade		\
	dialogSaveSession.glade		\
	drgeoMain.glade			\
	geoMenu.glade

EXTRA_DIST = $(icons_DATA) $(glade_DATA)

