scmdir = $(datadir)/drgeo/scm

scm_DATA = \
	drgeo_config.scm 				\
	preferences.scm					\
	drgeo_scm_interface.scm				\
	drgeo_scm_interface_constant.scm		\
	drgeo_scm_interface_constant_fr.scm		\
	drgeo_scm_interface_constant_sr.scm		\
	drgeo_scm_interface_constant_es.scm		\
	drgeo_scm_interface_constant_nl.scm		

EXTRA_DIST = $(scm_DATA)

