figuresdir = $(datadir)/drgeo/examples/figures

figures_DATA = 				\
	circle-locus.fgeo 		\
	conics.fgeo			\
	euler-line.fgeo			\
	cercle-inscrit.fgeo		\
	orthocenter-locus.fgeo		\
	parallelogramme.fgeo		\
	triangle-scale.fgeo		\
	polygons.fgeo			\
	triangle_rectangle1.fgeo	\
	mercedes.fgeo			\
	saliera.fgeo			\
	slope.fgeo			\
	sinusoide.fgeo			\
	symmetry-axe-2.fgeo		\
	symmetry-center.fgeo		\
	angle-inscrit.fgeo		\
	trigo1.fgeo			\
	moyenne-prop.fgeo		\
	partage-segment.fgeo		\
	varignon.fgeo			\
	triangles-homothetiques.fgeo 	\
	orthocentre-symetique.fgeo	\
	signed-distance.fgeo		\
	problem1.fgeo			\
	accel.fgeo 			\
	accel.big5.fgeo 			\
	lens.fgeo 			\
	duality.fgeo 			\
	refraction.fgeo			\
	fonctions_associees.fgeo	\
	light6.fgeo			\
	wheel.fgeo			\
	baballe.fgeo			\
	braik_conic.fgeo		\
	steiner_conic.fgeo		\
	polygon-7.fgeo

EXTRA_DIST = $(figures_DATA)

