schemedir = $(datadir)/drgeo/examples/scheme

scheme_DATA = 				\
	figure.scm			\
	polygon.scm			\
	polygon2.scm			\
	square.scm			\
	baum.scm			\
	spiral.scm			\
	steiner.scm			\
	baravelle.scm			\
	fractale.scm			\
	pappo.scm			\
	premier.scm			\
	koch.scm			\
	tilings.scm

EXTRA_DIST = $(scheme_DATA)


